@@ -1,25 +1,27 @@
 package com.ultreon.craft.network;
 
 import com.ultreon.craft.network.client.ClientPacketHandler;
+import com.ultreon.craft.network.server.LoginServerPacketHandler;
 import com.ultreon.craft.network.server.ServerPacketHandler;
 import com.ultreon.craft.network.system.MemoryConnection;
 import com.ultreon.craft.network.system.ServerMemoryConnection;
 import com.ultreon.craft.server.UltracraftServer;
+import org.jetbrains.annotations.Nullable;
 
-import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 public class MemoryNetworker implements Networker {
     private final UltracraftServer server;
-    private final MemoryConnection<ClientPacketHandler, ServerPacketHandler> otherSide;
-    private final ServerMemoryConnection connection;
+    private MemoryConnection<ClientPacketHandler, ServerPacketHandler> otherSide;
+    private @Nullable ServerMemoryConnection connection;
 
     public MemoryNetworker(UltracraftServer server, MemoryConnection<ClientPacketHandler, ServerPacketHandler> otherSide) {
         super();
         this.server = server;
         this.otherSide = otherSide;
-
         this.connection = new ServerMemoryConnection(otherSide, server);
+        this.connection.initiate(new LoginServerPacketHandler(this.server, connection), null);
     }
 
     @Override
@@ -29,12 +31,19 @@ public class MemoryNetworker implements Networker {
 
     @Override
     public List<ServerMemoryConnection> getConnections() {
-        return List.of(this.connection);
+        var conn = this.connection;
+        if (conn == null) {
+            return Collections.emptyList();
+        }
+        return List.of(conn);
     }
 
     @Override
     public void tick() {
-        connection.tick();
+        var conn = connection;
+        if (conn != null) {
+            conn.tick();
+        }
     }
 
     public MemoryConnection<ClientPacketHandler, ServerPacketHandler> getOtherSide() {
@@ -44,5 +53,9 @@ public class MemoryNetworker implements Networker {
     @Override
     public void close() {
 
+    }
+
+    public void setOtherSide(MemoryConnection<ClientPacketHandler, ServerPacketHandler> connection) {
+        this.otherSide = connection;
     }
 }
