@@ -42,13 +42,13 @@ public class CactiFeature extends WorldGenFeature {
 
         if (this.random.nextFloat() < this.threshold) {
             if (WorldGenDebugContext.isActive()) {
-                System.out.println("[Start " + Thread.currentThread().threadId() + "] TreeFeature: " + x + ", " + z + ", " + height);
+                System.out.println("[Start " + Thread.currentThread().getId() + "] TreeFeature: " + x + ", " + z + ", " + height);
             }
 
             var trunkHeight = this.random.nextInt(this.minTrunkHeight, this.maxTrunkHeight);
             if (trunkHeight + height + 1 > CHUNK_HEIGHT) {
                 if (WorldGenDebugContext.isActive()) {
-                    System.out.println("[End " + Thread.currentThread().threadId() + "] TreeFeature: " + x + ", " + z + ", " + height);
+                    System.out.println("[End " + Thread.currentThread().getId() + "] TreeFeature: " + x + ", " + z + ", " + height);
                 }
                 return false;
             }
@@ -59,7 +59,7 @@ public class CactiFeature extends WorldGenFeature {
                     for (int zOffset = -1; zOffset <= 1; zOffset++) {
                         if (!chunk.get(x + xOffset, y, z + zOffset).isAir()){
                             if (WorldGenDebugContext.isActive()) {
-                                System.out.println("[End " + Thread.currentThread().threadId() + "] TreeFeature: " + x + ", " + z + ", " + height + " - Not enough space");
+                                System.out.println("[End " + Thread.currentThread().getId() + "] TreeFeature: " + x + ", " + z + ", " + height + " - Not enough space");
                             }
                             return false;
                         }
@@ -72,7 +72,7 @@ public class CactiFeature extends WorldGenFeature {
             }
 
             if (WorldGenDebugContext.isActive()) {
-                System.out.println("[End " + Thread.currentThread().threadId() + "] TreeFeature: " + x + ", " + z + ", " + height + " - Success");
+                System.out.println("[End " + Thread.currentThread().getId() + "] TreeFeature: " + x + ", " + z + ", " + height + " - Success");
             }
             return true;
         }
